--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             position: absolute;
             z-index: 999;
             pointer-events: none;
-            top: 465px;
+            top: 467px;
             left: 45%;
         }
 
@@ -501,7 +501,7 @@
                     <a href="https://example.com" class="click-button" target="_blank" aria-label="Learn more about The Eclipse">CLICK HERE!</a>
                 </div>
                 <div class="eclipse-image-placeholder" role="img" aria-label="Placeholder for The Eclipse Illustration">
-                    The Eclipse Image Placeholder
+                    <img src="https://cdn.ddyt.cc/github/7.svg" style="width: 100%;height: 100%"  alt="">
                 </div>
             </div>
             <div class="slider-controls">
@@ -526,7 +526,7 @@
                 <h3>Main Character</h3>
             </div>
             <div class="guts-image-placeholder" role="img" aria-label="Placeholder for Guts Illustration">
-                Guts Image Placeholder
+                <img src="https://cdn.ddyt.cc/github/5.svg" style="width: 100%;height: 100%" alt="">
             </div>
         </div>
         <div class="img">
